--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  
   <title>Home Page - MiamiWalking.com - Miami</title>
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
   <!-- Bootstrap CSS CDN -->
@@ -25,6 +27,15 @@
 
     gtag('config', 'G-N90RMFHVNE');
   </script>
+
+<script>
+  if (window.location.protocol !== "https:") {
+    window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+  }
+  </script>
+
+
+
 
 </head>
 
@@ -190,7 +201,18 @@
   <!-- Bootstrap JS and Popper.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
-  <!-- <script async data-id="101472771" src="//static.getclicky.com/js"></script> -->
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('/sw.js').then(function(registration) {
+        console.log('Service Worker registered with scope:', registration.scope);
+      }, function(err) {
+        console.log('Service Worker registration failed:', err);
+      });
+    });
+  }
+</script>
+
 
 </body>
 
