--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta name="referrer" content="no-referrer-when-downgrade">
   <meta http-equiv="Feature-Policy" content="geolocation 'none'; microphone 'none'; camera 'none'">
-  <meta http-equiv="Cache-Control" content="max-age=31536000">  
-  
+  <meta http-equiv="Cache-Control" content="max-age=31536000">
+
   <title>Home Page - MiamiWalking.com - Miami</title>
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
   <!-- Bootstrap CSS CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">  
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=steps" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -35,7 +34,7 @@
     if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
       window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
     }
-    </script>
+  </script>
 
 
 
@@ -181,22 +180,18 @@
           </address>
         </div>
 
-     <!-- Social Media -->
-     <div class="col-lg-3 col-md-6 mb-4">
-      <h5>Follow Us</h5>
-      <div class="d-flex justify-content-start">
-          <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
-                  class="fab fa-facebook-f"></i></a>
-          <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
-                  class="fab fa-x-twitter"></i></a>
-          <!-- Changed this line -->
-          <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
-                  class="fab fa-linkedin-in"></i></a>
-          <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
-                  class="fab fa-instagram"></i></a>
-      </div>
-      <p class="mt-3">© 2024 MiamiWalking.com All rights reserved.</p>
-  </div>
+        <!-- Social Media -->
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5>Follow Us</h5>
+          <div class="d-flex justify-content-start">
+            <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i class="fab fa-x-twitter"></i></a>
+            <!-- Changed this line -->
+            <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i class="fab fa-instagram"></i></a>
+          </div>
+          <p class="mt-3">© 2024 MiamiWalking.com All rights reserved.</p>
+        </div>
       </div>
     </div>
   </footer>
@@ -205,16 +200,16 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
   <script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', function() {
-      navigator.serviceWorker.register('/sw.js').then(function(registration) {
-        console.log('Service Worker registered with scope:', registration.scope);
-      }, function(err) {
-        console.log('Service Worker registration failed:', err);
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('/sw.js').then(function (registration) {
+          console.log('Service Worker registered with scope:', registration.scope);
+        }, function (err) {
+          console.log('Service Worker registration failed:', err);
+        });
       });
-    });
-  }
-</script>
+    }
+  </script>
 
 
 </body>
