--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
 
   <title>Home Page - MiamiWalking.com - Miami</title>
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
-  <!-- Bootstrap CSS CDN -->
-  <link href="bootstrap.min.css" rel="stylesheet">  
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=steps" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="bootstrap.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
 
   <!-- Google tag (gtag.js) -->
@@ -29,21 +23,14 @@
 
     gtag('config', 'G-N90RMFHVNE');
   </script>
-
   <script>
     if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
       window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
     }
   </script>
-
-
-
-
 </head>
 
-
 <body>
-
   <!-- Header Section -->
   <header class="bg-white py-3">
     <div class="container text-center">
@@ -54,9 +41,6 @@
       </h1>
     </div>
   </header>
-
-
-
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -103,45 +87,47 @@
         </div>
         <div class="title-section text-center d-lg-block d-none mb-5">
           <h1>Welcome to MiamiWalking.com </h1>
-          <!-- <p class="lead">Discover Miami through food, culture, and lifestyle.</p> -->
         </div>
+
         <!-- Card Grid -->
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
               <div class="card">
-                <div class="d-flex justify-content-center align-items-center">
-                  <i class="fa-solid fa-person-walking material-icons"></i>
-                  <!-- <span class="material-icons">volunteer_activism</span> -->
-                </div>
+                <a href="CharityWalks.html">
+                  <div class="d-flex justify-content-center align-items-center">
+                    <img src="img/person-walking-solid (1).svg" class="card-img-top svg-card-img-2"
+                      alt="Description of image">
+                  </div>
+                </a>
                 <div class="card-body text-center">
-                  <a href="CharityWalks.html" class="btn  btn-outline-light btn-primary">Charity Walks</a>
+                  <a href="CharityWalks.html" class="btn btn-outline-light btn-primary">Charity Walks</a>
                 </div>
 
               </div>
             </div>
             <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
               <div class="card">
-                <div class="d-flex justify-content-center align-items-center">
-                  <span class="material-symbols-outlined material-icons">steps</span>
-                </div>
+                <a href="Shoes.html">
+                  <div class="d-flex justify-content-center align-items-center">
+                    <img src="img/Steps Icon Black.svg" class="card-img-top svg-card-img material-icons"
+                      alt="Description of image">
+                  </div>
+                </a>
                 <div class="card-body text-center">
                   <a href="Shoes.html" class="btn  btn-outline-light btn-primary">Shoes</a>
                 </div>
-
               </div>
             </div>
           </div>
         </div>
       </div>
-
       <!-- Right Sidebar -->
       <div class="col-lg-2 d-none d-lg-block">
         <!-- Keeps sidebar space occuppied -->
       </div>
     </div>
   </div>
-
   <footer class="bg-light text-dark mt-5 py-5">
     <div class="container">
       <div class="row">
