--- a/MensShoes.html
+++ b/MensShoes.html
@@ -221,7 +221,7 @@
     </footer>
 
     <!-- Bootstrap JS and Popper.js CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.min.js"></script>
     <script src="script.js"></script>
     <!-- <script async data-id="101472771" src="//static.getclicky.com/js"></script> -->
     <script>
