--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   </footer>
 
   <!-- Bootstrap JS and Popper.js CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="bootstrap.min.js"></script>
   <script src="script.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
