--- a/About.html
+++ b/About.html
@@ -6,10 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:;">
+  <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
+  
+  
 
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta name="referrer" content="no-referrer-when-downgrade">
-  <meta http-equiv="Feature-Policy" content="geolocation 'none'; microphone 'none'; camera 'none'">
+  
   <meta http-equiv="Cache-Control" content="max-age=31536000">
 
   <title>Home Page - MiamiWalking.com - Miami</title>
