--- a/About.html
+++ b/About.html
@@ -10,6 +10,7 @@
   <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
 
   <title>Home Page - MiamiWalking.com - Miami</title>
