--- a/About.html
+++ b/About.html
@@ -11,6 +11,7 @@
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta name="referrer" content="strict-origin-when-cross-origin">
   <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+  <meta http-equiv="X-Frame-Options" content="sameorigin">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
 
   <title>Home Page - MiamiWalking.com - Miami</title>
