--- a/About.html
+++ b/About.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self';">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-ancestors 'self';">
   <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta name="referrer" content="strict-origin-when-cross-origin">
   <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
   <meta http-equiv="X-Frame-Options" content="sameorigin">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
+  
   <title>Home Page - MiamiWalking.com - Miami</title>
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
   <link href="bootstrap.min.css" rel="stylesheet">
