--- a/Shoes.html
+++ b/Shoes.html
@@ -62,9 +62,9 @@
             <li class="nav-item">
               <a class="nav-link" href="Shoes.html">Shoes</a>
             </li>
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="ShoesNews.html">Shoes News</a>
-            </li> -->
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="About.html">About</a>
             </li>
