--- a/WomensCasualShoes.html
+++ b/WomensCasualShoes.html
@@ -13,7 +13,7 @@
     <meta http-equiv="X-Frame-Options" content="sameorigin">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
     <title>Home Page - MiamiWalking.com - Miami</title>
-    <link rel="canonical" href="https://example.com/nyfw-fall-2025-highlights">
+    <link rel="canonical" href="https://miamiwalking.com/WomensCasualShoes.html">
     <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
