--- a/ShoesNews20205/ShoesNewsFeb.2025/RogerFedererAndElmo.html
+++ b/ShoesNews20205/ShoesNewsFeb.2025/RogerFedererAndElmo.html
@@ -39,7 +39,7 @@
   <header class="bg-white py-3">
     <div class="container text-center">
       <h1 class="m-0">
-        <a href="index.html" title="Home">
+        <a href="../../index.html" title="Home">
           <img src="../../img/Miami-Walking-Logo-SVG.svg" class="logo" alt="Website Logo">
         </a>
       </h1>
