--- a/MensExerciseShoes.html
+++ b/MensExerciseShoes.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
     <meta http-equiv="X-Frame-Options" content="sameorigin">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
-    <title>Home Page - MiamiWalking.com - Miami</title>
+    <title>Men's Exercise Shoes - MiamiWalking.com - Miami</title>
     <link rel="canonical" href="https://miamiwalking.com/MensExerciseShoes.html">
     <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
     <link href="bootstrap.min.css" rel="stylesheet">
