--- a/Shoes.html
+++ b/Shoes.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
     <meta http-equiv="X-Frame-Options" content="sameorigin">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
-    <title>Home Page - MiamiWalking.com - Miami</title>
+    <title>Shoes - MiamiWalking.com - Miami</title>
     <link rel="canonical" href="https://miamiwalking.com/Shoes.html">
     <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
     <link href="bootstrap.min.css" rel="stylesheet">
